add application.yml file